Rename project from "editor" to "fresh"
Updated all documentation and configuration files to reflect the new project name:

- Changed project name in Cargo.toml from "editor" to "fresh"
- Renamed binary references from ./target/release/editor to ./target/release/fresh
- Updated config directory path from ~/.config/editor to ~/.config/fresh
- Updated log file paths from /tmp/editor.log to /tmp/fresh.log
- Renamed benchmark file from editor_benchmarks.rs to fresh_benchmarks.rs
- Updated cgroup naming from editor-lsp-* to fresh-lsp-*
- Updated all project name references in documentation:
  - README.md: Project title and references
  - docs/ARCHITECTURE.md: Project description
  - docs/PROCESS_LIMITS.md: Application references
  - docs/VISUAL_REGRESSION.md: Visual test captions
  - docs/VISUAL_REGRESSION_TESTING.md: Directory structure references
  - docs/TODO.md: Feature section renamed to "Editing Features"

Note: Generic references to "editor" (as in "text editor" or component names like "Editor" struct) were intentionally kept unchanged to maintain clarity.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "editor"
+name = "fresh"
 version = "0.1.0"
 authors = ["Noam Lewis"]
 edition = "2021"
@@ -36,7 +36,7 @@ insta = { version = "1.43", features = ["yaml"] }
 ctor = "0.2"
 
 [[bench]]
-name = "editor_benchmarks"
+name = "fresh_benchmarks"
 harness = false
 
 [profile.release]
