--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ proptest-regressions/
 # Flatpak build artifacts
 .flatpak-builder/
 repo/
+
+# ts-rs auto-generated bindings (we use plugins/lib/fresh.d.ts instead)
+bindings/
